# gp-diagnostics

./: .gitignore  README.md  TODO.md  pyproject.toml  tox.toml
.github/workflows/: ci.yml
examples/: example.ipynb
src/gp_diagnostics/: __init__.py  cv.py  metrics.py  plots.py
src/gp_diagnostics/utils/: __init__.py  checks.py  linalg.py  plots.py  stats.py
tests/: __init__.py  test_cv.py  test_metrics.py  test_utils_checks.py  test_utils_linalg.py  test_utils_stats.py  utils.py
