[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gp-diagnostics"
version = "0.1.0"
description = "Tools for diagnosing Gaussian Process models"
readme = "README.md"
authors = [
    { name = "Christian Agrell", email = "christian.agrell@dnv.com" },
    { name = "Magnus Kristiansen", email = "magnus.kristiansen@dnv.com" },
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "gpytorch>=1.13",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
    "tox>=4.24.1",
    "tox-uv>=1.20.1",
]

[tool.ruff]
line-length = 120
exclude = ["examples/*"]  # TODO: Remove this when examples are linted

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Missing trailing comma
    "ISC001",   # Single line implicit string concatination
    "N802",     # Function name should be lowercase
    "N803",     # Argument name should be lowercase
    "N806",     # Variable in function should be lowercase
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "C901",     # Function is too complex
    "PT018",    # Assertion should be broken down into multiple parts
    "S101",     # Use of `assert` detected
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]  # Ignore print statement violations in examples

[tool.ruff.lint.pydocstyle]
convention = "google"
